--- a/notejs-src-pre/mongodb.yaml
+++ b/notejs-src-pre/mongodb.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: mongo-pvc
+  namespace: notejs
 spec:
   accessModes:
     - ReadWriteOnce
@@ -13,18 +14,22 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mongo
+  namespace: notejs
 spec:
   selector:
     app: mongo
   ports:
-    - port: 27017
-      targetPort: 27017
+    - protocol: TCP
+      port: 27017 # set port of mongo-service
+      targetPort: 27017 # forward requests to port 27017
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: mongo
+  name: mongo-deployment
+  namespace: notejs
 spec:
+  replicas: 1
   selector:
     matchLabels:
       app: mongo
