--- a/notejs-src-pre/notejs.yaml
+++ b/notejs-src-pre/notejs.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: notejs-service
+  namespace: notejs
 spec:
 # export all pods with label notejs
   selector:
@@ -19,6 +20,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: notejs-ingress
+  namespace: notejs
   annotations:
     ingress.kubernetes.io/ssl-redirect: "false"
 spec:
@@ -29,6 +31,7 @@ spec:
         pathType: Prefix
         backend:
           service:
+# all http calls are forwarded to notejs-service:80
             name: notejs-service
             port:
               number: 80
@@ -37,6 +40,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: notejs-deployment
+  namespace: notejs
 # later used to bind the service to the pod
   labels:
     app: notejs
