--- a/notejs-src/notejs.yaml
+++ b/notejs-src/notejs.yaml
@@ -14,7 +14,7 @@ spec:
       port: 80
       targetPort: 3000
 # make  pods accessible from outside of the cluster
-  type: LoadBalancer
+# type: LoadBalancer
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
