--- a/notejs-src/mongodb-prod.yaml
+++ b/notejs-src/mongodb-prod.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: mongo-pvc
-  namespace: notejs
+  namespace: production
 spec:
   accessModes:
     - ReadWriteOnce
@@ -14,7 +14,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mongo
-  namespace: notejs
+  namespace: production
 spec:
   selector:
     app: mongo
@@ -27,7 +27,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: mongo-deployment
-  namespace: notejs
+  namespace: production
 spec:
   replicas: 1
   selector:
