--- a/notejs-src/mongodb-prod.yaml
+++ b/notejs-src/mongodb-prod.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: mongo-pvc
+  name: mongo-pvc-production
   namespace: production
 spec:
   accessModes:
@@ -26,7 +26,7 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: mongo-deployment
+  name: mongo-deployment-production
   namespace: production
 spec:
   replicas: 1
