--- a/notejs-src/mongodb-staging.yaml
+++ b/notejs-src/mongodb-staging.yaml
@@ -49,4 +49,4 @@ spec:
       volumes:
         - name: storage
           persistentVolumeClaim:
-            claimName: mongo-pvc
+            claimName: mongo-pvc-staging
